--- a/less/index.css
+++ b/less/index.css
@@ -133,5 +133,24 @@ table {
 html,
 body {
   height: 100%;
-  color: red;
+  padding: 3%;
+  max-width: 800px;
+}
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  padding: 5%;
+}
+.nav-container nav {
+  display: flex;
+}
+.nav-container nav a {
+  text-decoration: none;
+  margin-right: 4.5%;
+  color: black;
+}
+.intro {
+  background-color: lightgrey;
+  padding: 7% 4%;
 }
