--- a/less/index.less
+++ b/less/index.less
@@ -55,6 +55,42 @@ table {
 
 html, body {
 	height: 100%;
-	color: red;
+	padding: 3%;
+	max-width:800px;
 }
 
+
+// --- VARIABLES
+@black: black;
+
+
+
+
+
+// --- NAV
+
+.nav-container{
+	display: flex;
+	justify-content: space-between;
+	flex-direction: row-reverse;
+	padding: 5%;
+
+
+	nav{
+		display: flex;
+		//justify-content: space-between;
+		
+		a{
+			text-decoration: none;
+			margin-right: 4.5%;
+			color: @black;
+			
+		}
+	}
+}
+
+
+.intro{
+	background-color:lightgrey;
+	padding: 7% 4%;
+}
