--- a/less/index.less
+++ b/less/index.less
@@ -4,6 +4,13 @@
    License: none (public domain)
 */
 
+
+// --- IMPORTS
+@import url('https://fonts.googleapis.com/css?family=McLaren|Poppins|Raleway&display=swap');
+
+
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -54,18 +61,27 @@ table {
 }
 
 html, body {
-	height: 100%;
+	height: 100%; 
 	padding: 3%;
-	max-width:800px;
+	font-size:62.5%;
+	font-family: 'Poppins', sans-serif;
+
 }
 
 
 // --- VARIABLES
 @black: black;
+@font-large: 5rem;
+@font-medium: 2.5rem;
+@bottom: 3%;
 
 
 
 
+.page-wrapper{
+	width: 85%;
+	margin: 0 auto;	
+}
 
 // --- NAV
 
@@ -73,24 +89,80 @@ html, body {
 	display: flex;
 	justify-content: space-between;
 	flex-direction: row-reverse;
-	padding: 5%;
+	padding: 4%;
 
 
 	nav{
 		display: flex;
-		//justify-content: space-between;
 		
 		a{
+			font-size: @font-medium;
 			text-decoration: none;
 			margin-right: 4.5%;
 			color: @black;
-			
 		}
 	}
 }
 
 
+// --- INTRO SECTION
+
 .intro{
-	background-color:lightgrey;
+	background-color:aliceblue;
 	padding: 7% 4%;
+	border-radius: 5px;
+
+	.intro-img{
+		padding-bottom: @bottom;
+	}
+
+	h1{
+		font-size: @font-large;
+		padding-bottom: @bottom;
+	}
+
+	h3{
+		font-size: @font-medium;
+		padding-bottom: @bottom;
+		border-bottom: 1px solid lightblue;
+	}  
+
+	p{
+		font-size: @font-medium;
+		padding-top: @bottom;
+		padding-bottom:@bottom;
+	}
+
+	.intro-p-btn{
+		button{
+			font-size: 1.8rem;
+			text-decoration: none;
+			padding: 0.9%;
+			background-color: gray;
+			color: white;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+		}//button
+	}//.intro-p-btn
+}//.intro
+
+
+
+.middle-section{
+	font-size: @font-medium;
+	display: flex;
+
+	.info{
+		h2{
+			font-size: @font-large;
+		}
+		
+	}
+
+	.stuff{
+		h2{
+			font-size: @font-large;
+		}
+	}
 }
