--- a/less/index.less
+++ b/less/index.less
@@ -111,6 +111,7 @@ html, body {
 	background-color:aliceblue;
 	padding: 7% 4%;
 	border-radius: 5px;
+	margin-bottom: 5%;
 
 	.intro-img{
 		padding-bottom: @bottom;
@@ -152,8 +153,12 @@ html, body {
 .middle-section{
 	font-size: @font-medium;
 	display: flex;
+	width: 100%;
+	text-align: center;
 
 	.info{
+
+		width:25%;
 		h2{
 			font-size: @font-large;
 		}
@@ -161,6 +166,8 @@ html, body {
 	}
 
 	.stuff{
+
+		width:25%;
 		h2{
 			font-size: @font-large;
 		}
