--- a/less/index.css
+++ b/less/index.css
@@ -181,6 +181,7 @@ body {
   background-color: aliceblue;
   padding: 7% 4%;
   border-radius: 5px;
+  margin-bottom: 5%;
 }
 .intro .intro-img {
   padding-bottom: 3%;
@@ -212,9 +213,17 @@ body {
 .middle-section {
   font-size: 2.5rem;
   display: flex;
+  width: 100%;
+  text-align: center;
+}
+.middle-section .info {
+  width: 25%;
 }
 .middle-section .info h2 {
   font-size: 5rem;
+}
+.middle-section .stuff {
+  width: 25%;
 }
 .middle-section .stuff h2 {
   font-size: 5rem;
