--- a/less/index.less
+++ b/less/index.less
@@ -75,6 +75,15 @@ table {
     box-sizing: border-box;
 }
 
+// ---- MIXINS
+
+.table-border(){
+	border: 1px solid @dark-gray;
+}
+
+
+
+
 html, body {
 	height: 100%; 
 	padding: 3%;
@@ -106,7 +115,7 @@ html, body {
 		display: flex;
 
 		@media (max-width:787px){
-		text-aligns: center;
+			text-align: center;
 		}
 		
 		a{
@@ -203,7 +212,7 @@ html, body {
 		}
 
 		table, th, td {
-			border: 1px solid black;
+			.table-border();
 			padding: 2%;
 			text-align: @align-center;
 		}
@@ -221,7 +230,7 @@ html, body {
 		}
 
 		table, th, td {
-			border: 1px solid black;
+			.table-border();
 			border-collapse: collapse;
 		  }
 	}
